# grep-on-the-rust

./: Cargo.toml  README.md
crates/core/: Cargo.toml  README.md
crates/core/src/: config.rs  flag.rs  main.rs  run.rs
crates/search/: Cargo.toml  README.md
crates/search/src/: lib.rs
