[package]
name = "grep-on-the-rust"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
license = "MIT"

[dependencies]
search = { version = "0.1.2", path = "crates/search"}

[[bin]]
bench = false
path = "crates/core/src/main.rs"
name = "grep"

[workspace]
resolver = "2"
members = [
"crates/core",
"crates/search"
]

[workspace.package]
version = "0.1.2"
description = "This is my education project."
authors = ["Mike <mikepodkoptop@gmail.com>"]